[package]
name = "moss-wasm"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[workspace]
members = ["moss-cli", "moss-lib"]

[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["fuxiaohei <fudong0797@gmail.com>"]

[dependencies]

[workspace.dependencies]
time = "0.3.19"
tokio = { version = "1.25.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = [
    "time",
    "local-time",
    "env-filter"
] }
lazy_static = "1.4.0"
