[package]
name = "moss-wasm"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[workspace]
members = [
    "examples/rust-basic",
    "examples/rust-fetch",
    "examples/rust-kv",
    "examples/rust-router",
    "moss-cli",
    "moss-lib",
    "moss-lib/rpc",
    "moss-lib/storage",
    "moss-lib/service",
    "moss-runtime",
    "moss-runtime/host-call",
    "moss-sdk",
    "moss-sdk/macro",
    "moss-server",
]

[workspace.package]
version = "0.1.5"
edition = "2021"
authors = ["fuxiaohei <fudong0797@gmail.com>"]

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
moss-host-call = { path = "moss-runtime/host-call" }
moss-runtime = { path = "moss-runtime" }
tokio = { workspace = true }

[workspace.dependencies]
anyhow = "1.0.69"
bytes = "1.4.0"
http = "0.2.9"
time = "0.3.19"
tokio = { version = "1.25.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = [
    "time",
    "local-time",
    "env-filter"
] }
lazy_static = "1.4.0"
wit-bindgen-core = { git = "https://github.com/bytecodealliance/wit-bindgen" }
wit-bindgen-gen-guest-rust = { git = "https://github.com/bytecodealliance/wit-bindgen" }
wit-component = "0.7.1"
wit-parser = "0.6.2"
wasmtime = { version = "6.0.0", features = ["component-model", "async"] }
wasi-host = { git = "https://github.com/bytecodealliance/preview2-prototyping", package = "host" }
wasi-cap-std-sync = { git = "https://github.com/bytecodealliance/preview2-prototyping" }
async-trait = "0.1.64"
hyper = { version = "0.14.24", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
toml = "0.7.2"
once_cell = "1.17.1"
sea-orm = { version = "0.11.0", features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "with-time"
] }

[build-dependencies]
moss-runtime = { path = "moss-runtime" }
