[package]
name = "moss-cli"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
futures = "0.3.26"
hyper = { workspace = true }
moss-lib = { path = "../moss-lib" }
tokio = { workspace = true }
tracing = { workspace = true }
