[package]
name = "moss-lib"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
lazy_static = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
vergen = "7.5.1"

[lib]
doctest = false
