[package]
name = "moss-lib"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
bincode = "1.3.3"
lazy_static = { workspace = true }
serde = { workspace = true }
time = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
vergen = "7.5.1"

[lib]
doctest = false
