[package]
name = "moss-runtime"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
moss-host-call = { path = "./host-call" }
wasi-cap-std-sync = { workspace = true }
wasi-host = { workspace = true }
wasmtime = { workspace = true }
wit-bindgen-core = { workspace = true }
wit-bindgen-gen-guest-rust = { workspace = true }
wit-component = { workspace = true }
wit-parser = { workspace = true }
