[package]
name = "moss-runtime"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
deadpool = { version = "0.9.5", features = ["rt_tokio_1"] }
moss-host-call = { path = "./host-call" }
moss-storage = { path = "../moss-lib/storage" }
once_cell = "1.17.1"
tokio = { workspace = true }
tracing = { workspace = true }
wasi-cap-std-sync = { workspace = true }
wasi-host = { workspace = true }
wasmtime = { workspace = true }
wit-bindgen-core = { workspace = true }
wit-bindgen-gen-guest-rust = { workspace = true }
wit-component = { workspace = true }
wit-parser = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lib]
doctest = false
