[package]
name = "moss-sdk"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
moss-sdk-macro = { path = "./macro" }
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen" }
