[package]
name = "moss-server"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
moss-lib = { path = "../moss-lib" }
moss-rpc = { path = "../moss-lib/rpc" }
tokio = { workspace = true }
tracing = { workspace = true }
