[package]
name = "moss-core-service"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
once_cell = { workspace = true }
opendal = "0.29.0"
sea-orm = { workspace = true }
serde = { workspace = true }
thiserror = "1.0.38"
tracing = { workspace = true }
uuid = { version = "1.3.0", features = ["v4"] }
