[package]
name = "moss-kv-service"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lib]
doctest = false
