[package]
name = "moss-rpc-service"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
chrono = "0.4.23"
moss-core-service = { path = "../core-service" }
prost = "0.11.6"
tokio = { workspace = true }
tonic = "0.8.3"
tracing = { workspace = true }

[build-dependencies]
tonic-build = "0.8.3"
