[package]
name = "moss-rpc"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
moss-service = { path = "../service" }
prost = "0.11.6"
tokio = { workspace = true }
tonic = "0.8.3"
tracing = { workspace = true }

[build-dependencies]
tonic-build = "0.8.3"
