[package]
name = "moss-storage"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
once_cell = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lib]
doctest = false
