[package]
name = "moss-host-call"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = "A library for making host calls to the Moss runtime."

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
moss-storage = { path = "../../moss-lib/storage" }
reqwest = { version = "0.11.14", features = ["rustls-tls"] }
tokio = { workspace = true }
wasmtime = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lib]
doctest = false
