[package]
name = "moss-host-call"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = "A library for making host calls to the Moss runtime."

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
moss-kv-service = { path = "../../moss-lib/kv-service" }
reqwest = { version = "0.11.14", features = ["rustls-tls"] }
tokio = { workspace = true }
tracing = { workspace = true }
wasmtime = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lib]
doctest = false
